# project-spectre

./: .gitignore  Makefile  README.md  pyproject.toml
docker/: postgres.docker-compose.yaml  qdrant.docker-compose.yaml
docker/qdrant_data/: raft_state.json
